--- a/testiosapp1/testiosapp1/Base.lproj/Main.storyboard
+++ b/testiosapp1/testiosapp1/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                             </button>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="v92-bR-AQM" firstAttribute="leading" secondItem="I4O-qL-vOx" secondAttribute="leading" id="1Id-Ic-nE4"/>
                             <constraint firstAttribute="bottom" secondItem="KhS-ih-7ih" secondAttribute="bottom" constant="20" symbolic="YES" id="3yc-XI-lnG"/>
